--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.5.0",
     "clean-webpack-plugin": "^0.1.8",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.3",
     "jsx-loader": "^0.13.2",
     "open-browser-webpack-plugin": "0.0.2"
   }
