--- a/package.json
+++ b/package.json
@@ -15,25 +15,23 @@
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
+    "clean-webpack-plugin": "^0.1.8",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.15.0",
+    "html-loader": "^0.4.3",
+    "jsx-loader": "^0.13.2",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
-    "babel-preset-react": "^6.5.0",
-    "clean-webpack-plugin": "^0.1.8",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-loader": "^0.4.3",
-    "jsx-loader": "^0.13.2",
+    "webpack-dev-server": "^1.14.1",
     "open-browser-webpack-plugin": "0.0.2"
-  }
+  },
+  "dependencies": {}
 }
