--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "dev": "webpack-dev-server --devtool eval --progress --colors",
-    "deploy": "NODE_ENV=production webpack -p"
+    "dev": "webpack-dev-server",
+    "build": "webpack",
+    "deploy": "set NODE_ENV=production&&webpack -p --progress --colors"
   },
   "author": "huguozhi",
   "license": "MIT",
